--- a/public/demos/finance/finance.css
+++ b/public/demos/finance/finance.css
@@ -5,11 +5,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500;600;700;800;900&display=swap');
 /* variable */
 :root {
-    --base-color: #BC8947;
+    --base-color: #1D4E9E;
     --stromboli-green:#3E6558;
     --alt-font: 'Jost', sans-serif;
     --primary-font: 'Jost', sans-serif;
     --medium-gray: #828282;
+}
+
+.btn.btn-white{
+    color:  #000000 !important;
+    background-color: #FBC707;
+}
+
+.text-white span{
+     color:  #FBC707 !important;
 }
 /* reset */
 body {
