--- a/public/demos/finance/finance.css
+++ b/public/demos/finance/finance.css
@@ -125,3 +125,18 @@ header .navbar-brand img {
         margin-right: 0;
     }
 }
+
+
+.form-check-input.small-check {
+    transform: scaleX(0.3);
+    transform-origin: center;
+    width: 1rem;
+    height: 1rem;
+    margin-top: 0.3rem;
+}
+.form-check {
+
+    display: inline;
+}
+
+.form-check-input:checked[type=checkbox]{--bs-form-check-bg-image:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m6 10 3 3 6-6'/%3e%3c/svg%3e")}
